src/parts/style.css
/* ... */
.content_slider {
  position: relative;
  width: 100%;
  overflow-x: scroll;
  overflow-y: hidden;
  display: flex;
  align-items: flex-start;
  flex: 1;
}

.content_slider .content_page {
  background-color: #1e1f33;
  color: #1e1f33;
  height: 100%;
  width: 100%;
  min-width: 100%;
  min-height: 100%;
  max-width: 100%;
  max-height: 100%;
  /* glow overflow */
  overflow: visible;
}

.content_page .no-items {
  position: absolute;
  font-size: 1.5rem;
  color: rgba(252, 252, 252);
  background-color: rgba(0, 0, 0, 0.85);
  height: 100%;
  width: 100%;
  display: inline-flex;
  justify-content: center;
  align-items: flex-end;
  padding-bottom: 6rem;
}

#all-text {
  visibility: hidden;
  white-space: normal;
  word-break: break-word;
  width: 100%;
  position: absolute;
}

.universal_info_display_nav_slider {
  background-color: #1e1f33;
  height: 8%;
  width: 100%;
  overflow-x: scroll;
  overflow-y: hidden;
  display: flex;
  align-items: center;
  flex-wrap: nowrap;
}

#universal_info_display_nav_page_slider {
  background-color: #1e1f33;
}

.filterbar {
  height: 2rem;
  max-height: 2rem;
  min-height: 2rem;
  width: 100%;
  display: flex;
  font-size: 1.2rem;
}

.range_control {
  margin: 0% 12%;
  width: 76%;
  position: relative;
  height: 3.5rem;
  min-height: 3.5rem;
  max-height: 3.5rem;
}

.range_control .active {
  position: absolute;
  height: 100%;
  background-color: gold;
  opacity: 0.6;
  left: 0;
}

.range_control.asc {
  background: linear-gradient(
    to bottom right,
    transparent 0%,
    transparent 50%,
    rgb(252, 252, 252) 50%,
    rgb(252, 252, 252) 100%
  );
}

.range_control.desc {
  background: linear-gradient(
    to bottom left,
    transparent 0%,
    transparent 50%,
    rgb(252, 252, 252) 50%,
    rgb(252, 252, 252) 100%
  );
}
.range_control.desc .active,
.range_control.asc .active {
  right: 0;
  left: auto;
}

.range_label {
  color: rgb(252, 252, 252);
  position: absolute;
  height: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  font-size: 1rem;
}

.range_control .range_label.min {
  padding-top: 1.75rem;
}

.range_control .range_label.max {
  padding-bottom: 1.75rem;
}

.range_control.mi .range_label.min,
.range_control.mi .range_label.max {
  padding-top: 0;
  padding-bottom: 0;
}

.range_control.mi .range_label.min,
.range_control.asc .range_label.min,
.range_control.desc .range_label.max {
  left: 0;
  transform: translateX(-100%);
  padding-right: 1px;
}

.range_control.mi .range_label.max,
.range_control.asc .range_label.max,
.range_control.desc .range_label.min {
  right: 0;
  transform: translateX(100%);
  padding-left: 1px;
}

input {
  position: absolute;
  -webkit-appearance: none;
  z-index: 1;
  width: 100%;
  margin: 0;
  top: 0;
  bottom: 0;
  left: 0;
  background-color: transparent;
}

.range_control.desc input {
  direction: rtl;
}

input[type="range"]::-webkit-slider-runnable-track {
  width: 100%;
  height: 0.5rem;
  cursor: pointer;
  background-color: greenyellow;
}

input[type="range"]:focus {
  outline: none;
}

input[type="range"]::-webkit-slider-thumb {
  height: 2rem;
  width: 2rem;
  margin-top: -12px;
  border-radius: 1rem;
  border: 4px solid #1e1f33;
  background-color: rgb(252, 252, 252);
  cursor: pointer;
  -webkit-appearance: none;
}

.filter_button {
  flex: 1 1 0;
  justify-content: center;
  align-items: center;
  display: flex;
  overflow: hidden;
  box-sizing: border-box;
  font-size: 1.1rem;
  border: 1px solid #1e1f33;
  border-right: 0;
  background-color: #707e92;
  color: #80f077;
  text-shadow: 1px 1px green;
}

.filter_button.selected {
  border: 4px solid gold;
}

.filter_button.on {
  background-color: rgb(252, 252, 252);
  color: rgb(35, 30, 30);
  text-shadow: 1px 1px lightgray;
}

.filter_button.asc {
  background: linear-gradient(
    to bottom right,
    lightgray 0%,
    lightgray 50%,
    rgb(252, 252, 252) 50%,
    rgb(252, 252, 252) 100%
  );
}

.filter_button.desc {
  background: linear-gradient(
    to bottom left,
    lightgray 0%,
    lightgray 50%,
    rgb(252, 252, 252) 50%,
    rgb(252, 252, 252) 100%
  );
}

.item-grid {
  width: 100%;
  height: 100%;
  display: flex;
  flex-wrap: wrap;
}

.item-grid.end {
  align-items: flex-end;
}

.item-grid.bg-gradient {
  background-color: #32409b;
  background-image: linear-gradient(0deg, #1b1a22 0%, #32409b 100%);
}

.item-grid .item {
  position: relative;
  height: 33.33%;
  width: 50%;
  float: left;
  border: 0.5px solid rgba(0, 0, 0, 0.3);
  display: flex;
  flex-direction: column;
  align-items: flex-start;
}

.item-grid .item span {
  font-size: 1rem;
  color: lightyellow;
  z-index: 1;
  padding: 0.1rem 0.2rem;
  text-shadow: 2px 2px black;
  background: rgba(0, 0, 0, 0.25);
  border-top-right-radius: 3px;
  border-bottom-right-radius: 3px;
  margin-left: 0.2rem;
}

.item-grid .item .title {
  font-weight: bold;
  color: greenyellow;
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
  max-width: calc(100% - 0.2rem);
  padding-bottom: 0.1rem;
  margin-top: 0.2rem;
}

.item-grid .item .container {
  display: flex;
  flex-direction: row;
  flex: 1;
  min-height: 0;
}

.item-grid .item .container-text {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
}

.item-grid .item .ppu {
  display: none;
}

.item-grid .item .container-img {
  position: relative;
  display: flex;
  width: 100%;
  justify-content: center;
  align-items: center;
}

.item-grid .glow {
  position: absolute;
  object-fit: cover;
  max-width: 200%;
  max-height: 200%;
  margin: 0.25rem;
  opacity: 0.5;
  object-fit: cover;
  animation: fadeInAnimation ease 3s;
  animation-iteration-count: infinite;
  animation-fill-mode: forwards;
}

@keyframes fadeInAnimation {
  0% {
    opacity: 1;
  }
  50% {
    opacity: 0.75;
  }
  100% {
    opacity: 1;
  }
}

.item-grid .thumb {
  object-fit: cover;
  max-width: 100%;
  max-height: 100%;
  margin: 0.25rem;
  z-index: 1;
}
/* ... */

